db/0.3.5/modules/ROOT/pages/database-connector-reference.adoc
= Database Connector Reference
:keywords: database connector, jdbc, anypoint studio, esb, data base, connectors, mysql, stored procedure, sql, derby, oracle
:page-aliases: 3.5@mule-runtime::database-connector-reference.adoc

This page summarizes the configuration parameters of the *Database Connector*.

== Transport (schemadoc:page-title not set)

NOTE
Note: In Mule 3.7 and newer, selected fields support MEL expressions. For more information, see the xref:index.adoc[Database Connector guide].

== Select

Selects data from a database

.Attributes of <select...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|config-ref |string |no |  |Defines the configuration parameters for the JDBC connection.
|source |string |no |  |The expression used to obtain the value used to calculate parameters. Default is empty, so parameters are calculated from the payload".
|target |string |no |#[payload] |The enricher expression used to enrich the current message with the result of the SQL processing.
|transactionalAction |transactionalActionType |no |JOIN_IF_POSSIBLE |Indicates how the message processor will be behave regarding transactions.
|streaming |boolean |no |false |Indicates if result sets must be returned as an iterator or as list of maps.
|fetchSize |integer |no |  |Indices how many rows should be fetched from the database when rows are read from a resultSet. This property its required when streaming is true, in that case a default value (10) is used.
|maxRows |integer |no |  |Sets the limit for the maximum number of rows that any ResultSet object generated by this message processor can contain to the given number. If the limit is exceeded, the excess rows are silently dropped.
|===

.Child Elements of <select...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|dynamic-query |0..1 |
|template-query-ref |0..1 |
|in-param |0..* |
|parameterized-query |0..1 |
|abstractQueryResultSetHandler |0..1 |
|===

== Update

Updates data from a database

.Attributes of <update...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|config-ref |string |no |  |Defines the configuration parameters for the JDBC connection.
|source |string |no |  |The expression used to obtain the value used to calculate parameters. Default is empty, so parameters are calculated from the payload".
|target |string |no |#[payload] |The enricher expression used to enrich the current message with the result of the SQL processing.
|transactionalAction |transactionalActionType |no |JOIN_IF_POSSIBLE |Indicates how the message processor will be behave regarding transactions.
|bulkMode |boolean |no |false |Indicates whether or not a bulk update is requested. When true, payload is required to be a collection and a bulk update will be executed for each item in the collection.
|===

.Child Elements of <update...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|dynamic-query |0..1 |
|template-query-ref |0..1 |
|in-param |0..* |
|parameterized-query |0..1 |
|===

== Delete

Deletes data from a database

.Attributes of <delete...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|config-ref |string |no |  |Defines the configuration parameters for the JDBC connection.
|source |string |no |  |The expression used to obtain the value used to calculate parameters. Default is empty, so parameters are calculated from the payload".
|target |string |no |#[payload] |The enricher expression used to enrich the current message with the result of the SQL processing.
|transactionalAction |transactionalActionType |no |JOIN_IF_POSSIBLE |Indicates how the message processor will be behave regarding transactions.
|bulkMode |boolean |no |false |Indicates whether or not a bulk update is requested. When true, payload is required to be a collection and a bulk update will be executed for each item in the collection.
|===

.Child Elements of <delete...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|dynamic-query |0..1 |
|template-query-ref |0..1 |
|in-param |0..* |
|parameterized-query |0..1 |
|===

== Insert

Inserts data into a database

.Attributes of <insert...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|config-ref |string |no |  |Defines the configuration parameters for the JDBC connection.
|source |string |no |  |The expression used to obtain the value used to calculate parameters. Default is empty, so parameters are calculated from the payload".
|target |string |no |#[payload] |The enricher expression used to enrich the current message with the result of the SQL processing.
|transactionalAction |transactionalActionType |no |JOIN_IF_POSSIBLE |Indicates how the message processor will be behave regarding transactions.
|bulkMode |boolean |no |false |Indicates whether or not a bulk update is requested. When true, payload is required to be a collection and a bulk update will be executed for each item in the collection.
|autoGeneratedKeys |boolean |no |false |Indicates when auto-generated keys should be made available for retrieval.
|autoGeneratedKeysColumnIndexes |string |no |  |Comma separated list of column indexes that indicates which auto-generated keys should be made available for retrieval.
|autoGeneratedKeysColumnNames |string |no |  |Comma separated list of column names that indicates which auto-generated keys should be made available for retrieval.
|===

.Child Elements of <insert...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|dynamic-query |0..1 |
|template-query-ref |0..1 |
|in-param |0..* |
|parameterized-query |0..1 |
|===

== Execute ddl

Enables execution of DDL queries against a database

.Attributes of <execute-ddl...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|config-ref |string |no |  |Defines the configuration parameters for the JDBC connection.
|source |string |no |  |The expression used to obtain the value used to calculate parameters. Default is empty, so parameters are calculated from the payload".
|target |string |no |#[payload] |The enricher expression used to enrich the current message with the result of the SQL processing.
|transactionalAction |transactionalActionType |no |JOIN_IF_POSSIBLE |Indicates how the message processor will be behave regarding transactions.
|===

.Child Elements of <execute-ddl...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|dynamic-query |1..1 |
|===

== Bulk execute

Updates data from a database

.Attributes of <bulk-execute...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|config-ref |string |no |  |Defines the configuration parameters for the JDBC connection.
|source |string |no |  |The expression used to obtain the value used to calculate parameters. Default is empty, so parameters are calculated from the payload".
|target |string |no |#[payload] |The enricher expression used to enrich the current message with the result of the SQL processing.
|transactionalAction |transactionalActionType |no |JOIN_IF_POSSIBLE |Indicates how the message processor will be behave regarding transactions.
|file |string |no |  |The location of a file to load. The file can point to a resource on the classpath or on disk.
|===

.Child Elements of <bulk-execute...>
[%header%autowidth.spread]
|===
|Name |Cardinality |Description
|===

== Stored procedure

Executes a SQL statement in a database

.Attributes of <stored-procedure...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|config-ref |string |no |  |Defines the configuration parameters for the JDBC connection.
|source |string |no |  |The expression used to obtain the value used to calculate parameters. Default is empty, so parameters are calculated from the payload".
|target |string |no |#[payload] |The enricher expression used to enrich the current message with the result of the SQL processing.
|transactionalAction |transactionalActionType |no |JOIN_IF_POSSIBLE |Indicates how the message processor will be behave regarding transactions.
|streaming |boolean |no |false |Indicates if result sets must be returned as an iterator or as list of maps.
|fetchSize |integer |no |  |Indices how many rows should be fetched from the database when rows are read from a resultSet. This property its required when streaming is true, in that case a default value (10) is used.
|maxRows |integer |no |  |Sets the limit for the maximum number of rows that any ResultSet object generated by this message processor can contain to the given number. If the limit is exceeded, the excess rows are silently dropped.
|autoGeneratedKeys |boolean |no |false |Indicates when auto-generated keys should be made available for retrieval.
|autoGeneratedKeysColumnIndexes |string |no |  |Comma separated list of column indexes that indicates which auto-generated keys should be made available for retrieval.
|autoGeneratedKeysColumnNames |string |no |  |Comma separated list of column names that indicates which auto-generated keys should be made available for retrieval.
|===

.Child Elements of <stored-procedure...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|dynamic-query |0..1 |
|template-query-ref |0..1 |
|in-param |0..* |
|parameterized-query |0..1 |
|in-param |0..1 |
|out-param |0..1 |
|inout-param |0..1 |
|===

== Template query

.Attributes of <template-query...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |name (no spaces) |yes |  |Identifies the query so that other elements can reference it.
|===

.Child Elements of <template-query...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|dynamic-query |1..1 |
|parameterized-query |1..1 |
|in-param |0..* |
|template-query-ref |1..1 |
|in-param |1..* |
|===

== Connection properties

Allows to specify a list of custom key-value connectionProperties for the config

.Attributes of <connection-properties...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|===

.Child Elements of <connection-properties...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|property |1..* |
|===

== Data types

Allows to specify non standard data types

.Attributes of <data-types...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|===

.Child Elements of <data-types...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|data-type |1..* |
|===

== Pooling profile

Provides a way to configure database connection pooling.

.Attributes of <pooling-profile...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|maxPoolSize |integer |no |  |Maximum number of Connections a pool will maintain at any given time.
|minPoolSize |integer |no |  |Minimum number of Connections a pool will maintain at any given time.
|acquireIncrement |integer |no |  |Determines how many connections at a time will try to acquire when the pool is exhausted.
|preparedStatementCacheSize |integer |no |  |Determines how many statements are cached per pooled connection. Defaults to 0, meaning statement caching is disabled.
|maxWaitMillis |string |no |  |The number of milliseconds a client calling getConnection() will wait for a Connection to be checked-in or acquired when the pool is exhausted. Zero means wait indefinitely
|===

.Child Elements of <pooling-profile...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|===

== Generic config

Provides a way to define a JDBC configuration for any DB vendor.

.Attributes of <generic-config...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |name (no spaces) |yes |  |Identifies the database configuration so other elements can reference it.
|dataSource-ref |string |no |  |Reference to a JDBC DataSource object. This object is typically created using Spring. When using XA transactions, an XADataSource object must be provided.
|url |string |no |  |URL used to connect to the database.
|useXaTransactions |boolean |no |  |Indicates whether or not the created datasource has to support XA transactions. Default is false.
|driverClassName |string |no |  |Fully qualified name of the database driver class.
|connectionTimeout |int |no |  |Maximum time in seconds that this data source will wait while attempting to connect to a database. A value of zero specifies that the timeout is the default system timeout if there is one; otherwise, it specifies that there is no timeout.
|transactionIsolation |enumeration |no |  |The transaction isolation level to set on the driver when connecting the database.
|===

.Child Elements of <generic-config...>

[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|pooling-profile |0..1 |Provides a way to configure database connection pooling.
|connection-properties |0..1 |Allows to specify a list of custom key-value connectionProperties for the config
|data-types |0..1 |Allows to specify non standard data types
|===

== Derby config

.Attributes of <derby-config...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |name (no spaces) |yes |  |Identifies the database configuration so other elements can reference it.
|dataSource-ref |string |no |  |Reference to a JDBC DataSource object. This object is typically created using Spring. When using XA transactions, an XADataSource object must be provided.
|url |string |no |  |URL used to connect to the database.
|useXaTransactions |boolean |no |  |Indicates whether or not the created datasource has to support XA transactions. Default is false.
|driverClassName |string |no |  |Fully qualified name of the database driver class.
|connectionTimeout |int |no |  |Maximum time in seconds that this data source will wait while attempting to connect to a database. A value of zero specifies that the timeout is the default system timeout if there is one; otherwise, it specifies that there is no timeout.
|transactionIsolation |enumeration |no |  |The transaction isolation level to set on the driver when connecting the database.
|user |string |no |  |The user that is used for authentication against the database.
|password |string |no |  |The password that is used for authentication against the database.
|===

.Child Elements of <derby-config...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|pooling-profile |0..1 |Provides a way to configure database connection pooling.
|connection-properties |0..1 |Allows to specify a list of custom key-value connectionProperties for the config
|data-types |0..1 |Allows to specify non standard data types
|===

== Oracle config

.Attributes of <oracle-config...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |name (no spaces) |yes |  |Identifies the database configuration so other elements can reference it.
|dataSource-ref |string |no |  |Reference to a JDBC DataSource object. This object is typically created using Spring. When using XA transactions, an XADataSource object must be provided.
|url |string |no |  |URL used to connect to the database.
|useXaTransactions |boolean |no |  |Indicates whether or not the created datasource has to support XA transactions. Default is false.
|driverClassName |string |no |  |Fully qualified name of the database driver class.
|connectionTimeout |int |no |  |Maximum time in seconds that this data source will wait while attempting to connect to a database. A value of zero specifies that the timeout is the default system timeout if there is one; otherwise, it specifies that there is no timeout.
|transactionIsolation |enumeration |no |  |The transaction isolation level to set on the driver when connecting the database.
|user |string |yes |  |The user that is used for authentication against the database.
|password |string |yes |  |The password that is used for authentication against the database.
|host |string |no |  |Allows to configure just the host part of the JDBC URL (and leave the rest of the default JDBC URL untouched).
|port |integer |no |  |Allows to configure just the port part of the JDBC URL (and leave the rest of the default JDBC URL untouched).
|instance |string |no |  |Allows to configure just the instance part of the JDBC URL (and leave the rest of the default JDBC URL untouched).
|===

.Child Elements of <oracle-config...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|pooling-profile |0..1 |Provides a way to configure database connection pooling.
|connection-properties |0..1 |Allows to specify a list of custom key-value connectionProperties for the config
|data-types |0..1 |Allows to specify non standard data types
|===

== Mysql config

.Attributes of <mysql-config...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |name (no spaces) |yes |  |Identifies the database configuration so other elements can reference it.
|dataSource-ref |string |no |  |Reference to a JDBC DataSource object. This object is typically created using Spring. When using XA transactions, an XADataSource object must be provided.
|url |string |no |  |URL used to connect to the database.
|useXaTransactions |boolean |no |  |Indicates whether or not the created datasource has to support XA transactions. Default is false.
|driverClassName |string |no |  |Fully qualified name of the database driver class.
|connectionTimeout |int |no |  |Maximum time in seconds that this data source will wait while attempting to connect to a database. A value of zero specifies that the timeout is the default system timeout if there is one; otherwise, it specifies that there is no timeout.
|transactionIsolation |enumeration |no |  |The transaction isolation level to set on the driver when connecting the database.
|user |string |no |  |The user that is used for authentication against the database.
|password |string |no |  |The password that is used for authentication against the database.
|database |string |no |  |The name of the database. Must be configured unless a full JDBC URL is configured.
|host |string |no |  |Allows to configure just the host part of the JDBC URL (and leave the rest of the default JDBC URL untouched).
|port |integer |no |  |Allows to configure just the port part of the JDBC URL (and leave the rest of the default JDBC URL untouched).
|===

.Child Elements of <mysql-config...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|pooling-profile |0..1 |Provides a way to configure database connection pooling.
|connection-properties |0..1 |Allows to specify a list of custom key-value connectionProperties for the config
|data-types |0..1 |Allows to specify non standard data types
|===

== In param

.Attributes of <in-param...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |string |yes |  |The name for the input parameter
|value |string |yes |  |The value for the parameter
|type |ExtendedJdbcDataTypes |no |  |Parameter type name
|===

.Child Elements of <in-param...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|===

== In param

.Attributes of <in-param...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |string |yes |  |The name for the input parameter
|value |string |yes |  |The value for the parameter
|type |ExtendedJdbcDataTypes |no |  |Parameter type name
|===

.Child Elements of <in-param...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|===

== In param

.Attributes of <in-param...>

[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |string |yes |  |The name for the input parameter
|defaultValue |string |yes |  |The value for the parameter
|type |ExtendedJdbcDataTypes |no |  |Parameter type name
|===

.Child Elements of <in-param...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|===

== In param

.Attributes of <in-param...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |string |yes |  |The name for the input parameter
|defaultValue |string |yes |  |The value for the parameter
|===

.Child Elements of <in-param...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|===

== In param

.Attributes of <in-param...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |string |yes |  |The name for the input parameter
|value |string |yes |  |The value for the parameter
|type |ExtendedJdbcDataTypes |no |  |Parameter type name
|===

.Child Elements of <in-param...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|===

== Out param

.Attributes of <out-param...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |string |yes |  |The name for the output parameter
|type |ExtendedJdbcDataTypes |no |  |Parameter type name
|===

.Child Elements of <out-param...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|===

== Inout param

.Attributes of <inout-param...>
[%header%autowidth.spread]
|===
|Name |Type |Required |Default |Description
|name |string |yes |  |The name for the output parameter
|value |string |yes |  |The value for the parameter
|type |ExtendedJdbcDataTypes |no |  |Parameter type name
|===

.Child Elements of <inout-param...>
[%header%autowidth,width=80%]
|===
|Name |Cardinality |Description
|===

== See Also

* Access the xref:0.3.6@index.adoc[main database connector documentation] for an overview, user guide, and examples.
